# tp-final-aseca

./: .dockerignore  .env.example  .gitignore  README.md  build.gradle  docker-compose.yml  settings.gradle
.github/hooks/: pre-commit  pre-push
.github/workflow/: Coverage.yml
.github/workflows/: Build.yml  Coverage.yml  build.yml  coverage.yml  create-portfolio-tracker-image.yml  locust.yml  only-dev-into-main.yml  sec-edgar.yml  yahoo-finance.yml
docs/: README.md  definition-of-done.md  frontend-pendiente.md
docs/feature-01-fundaciones-tecnicas-del-producto/: README.md
docs/feature-02-identidad-y-acceso/: README.md
docs/feature-03-gestion-de-companias/: README.md
docs/feature-04-operaciones-e-historial/: README.md
docs/feature-05-portfolio-del-usuario/: README.md
docs/feature-06-watchlist-y-monitoreo-de-empresas/: README.md
docs/feature-07-integracion-con-yahoo-finance/: README.md
docs/feature-07-integracion-mobile/: README.md
docs/feature-08-integracion-con-sec-edgar/: README.md
docs/feature-09-frontend-web-y-mobile/: README.md
load-tests/: Dockerfile  README.md  common.py  load.py  requirements.txt  stress.py
load-tests/tests/: test_common.py  (+1 more)
portfolio-tracker/: Dockerfile  build.gradle
yahoo-finance/: Dockerfile  README.md  pyproject.toml
yahoo-finance/src/yahoo_finance/: __init__.py  __main__.py  cli.py  models.py  postgres_repository.py  service.py  yahoo_provider.py
yahoo-finance/tests/: test_live_batch_end_to_end.py  test_postgres_repository_integration.py  test_price_update_service.py  test_yahoo_provider_live.py
(+148 files in other folders)
